--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
     <body>
         
 
-
+  <div class="sidenav1">
         <div class="sidenav">
 
                 <a href="#link"><i class="fa fa-th-large" style="margin-top: 100px;"></i>     
                 <a href="#link"><i class="fa fa-search" style="margin-top:20px;"></i></a>
                 <a href="#link"><i class="fa fa-shopping-basket"style="margin-top:20px;"></i></a>
 
+        </div> 
         </div> 
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
