--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Sucha">
+	<meta name="description" content="Happy Birthday Xola">
+	<meta name="robots" content="index, follow" />
+	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -43,16 +45,16 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">S</h2>
+    	<h2 style="color:#8FAD00;">X</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">U</h2>
+    	<h2 style="color:#8377E4;">O</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">C</h2>
+    	<h2 style="color:#99C96A;">L</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">H</h2>
+    	<h2 style="color:#20CFB4;">A</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
