--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday suchi</title>
+	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Suchi">
+	<meta name="description" content="Happy Birthday Sucha">
+	<meta name="robots" content="index, follow" />
+	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -53,9 +55,6 @@
     </div>
     <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;">H</h2>
-    </div>
-    <div class="balloons text-center" id="b8">
-    	<h2 style="color:#F2B300;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
