--- a/indrdhaex.html
+++ b/indrdhaex.html
@@ -5,9 +5,9 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday Sucha</title>
+	<title>Happy Birthday Pooja</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Sucha">
+	<meta name="description" content="Happy Birthday Pooja">
 	<meta name="robots" content="index, follow" />
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
@@ -35,25 +35,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">3</h2>
+    	<h2 style="color:#F2B300;">1</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">Y</h2>
+    	<h2 style="color:#0719D4;">st</h2>
     </div>
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">HBD</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">SU</h2>
+    	<h2 style="color:#8FAD00;">Po</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">CHA</h2>
+    	<h2 style="color:#8377E4;">oja</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">R</h2>
+    	<h2 style="color:#99C96A;">L</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">T</h2>
+    	<h2 style="color:#20CFB4;">U</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -149,7 +149,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Suchaaaa</p>
+				<p>a very happy birthday  Pujjjaaaaaaaa</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -161,7 +161,7 @@
 					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
 					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday Sucha</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday Pujja</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
